added nav,banner and company section

--- a/index.html
+++ b/index.html
@@ -4,8 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INFLUENCER'S GEAR</title>
+    <link rel="stylesheet" href="styles/influencer-gear.css">
 </head>
-<body>
-    
+<body class="poppins-font">
+    <header class="header">
+    <!-- NAVBAR SECTION -->
+        <nav class="navbar">
+        <h3 class="nav-logo common-headings black">Influencer products</h3>
+        <ul class="nav-menu-items">
+            <li><a href="">Home</a></li>
+            <li><a href="">Products</a></li>
+            <li><a href="">Sign up</a></li>
+            <li><a href="">Log in</a></li>
+            <img src="images/icons/mynaui--search.svg" alt="">
+            <img src="images/icons/clarity--shopping-cart-outline-badged.svg" alt="">
+        </ul>
+    </nav>
+    <!-- BANNER SECTION -->
+     <div class="banner">
+        <div class="first-side">
+            <h3 class="banner-title black">Start your Journey as <br> Influencer</h3>
+            <p class="banner-description secondary-common-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros. Lectus faucibus.</p>
+            <button class="banner-btn">
+            <a href="">
+                Preebook now 
+                <img src="images/icons/Group.png" alt="">
+            </a>
+            </button>
+        </div>
+        <div class="banner-cam-img">
+            <img src="images/main-camera.png" alt="">
+        </div>
+     </div>
+    </header>
+    <main>
+        <!-- COMPANIES NAME -->
+        <section class="companies">
+           <div class="companies-container">
+            <img src="images/logos/Alibaba.svg" alt="">
+            <img src="images/logos/Amazon.svg" alt="">
+            <img src="images/logos/Daraz.pk Logo.svg" alt="">
+            <img src="images/logos/Ebay.svg" alt="">
+            <img src="images/logos/Rakuten.svg" alt="">
+            <img src="images/logos/Walmart.svg" alt="">
+            <img src="images/logos/Target.svg" alt="">
+           </div>
+        </section>
+    </main>
 </body>
 </html>
