added feauted products section

--- a/index.html
+++ b/index.html
@@ -191,16 +191,26 @@
                 </div> 
             </div>
         </section>
+        <!-- SEE MORE BTN -->
        <div class="gadget-btn">
                 <button class="see-more-btn">
                 <a href="">  See More <img class="arrow" src="images/icons/Group.png" alt=""></a>
                 </button>
-                </div>
-        <!-- <section class="featured-products">
+        </div>
+        <!-- FEATURED PRODUCTS -->
+        <section class="featured-products">
             <div class="featured-products-container">
-                <img src="" alt="">
+                <img src="images/gear.png" alt="">
+                <div class="feauter-2nd-part">
+                    <h2 class="featured-title">Featured products at one place</h2>
+                    <p class="featured-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <button class="banner-btn featured-btn">
+                    <a href="">Join Now
+                    <img src="images/icons/Group.png" alt=""></a>
+                    </button>
+                </div>
             </div>
-        </section> -->
+        </section>
     </main>
 </body>
 </html>
