--- a/index.html
+++ b/index.html
@@ -212,5 +212,18 @@
             </div>
         </section>
     </main>
+    <!-- FOOTER PART -->
+    <footer class="footer">
+        <div class="footer-container">
+            <h2 class="footer-title">Influencer products</h2>
+            <p class="footer-description manrope-font">Copyright © 2020  influencer products All rights reserved</p>
+            <div class="footer-img-container">
+              <img src="images/new-icons/Instagram.svg" alt="Instagram">
+              <img src="images/new-icons/Dribbble.svg" alt="Dribbble">
+              <img src="images/new-icons/Twitter.svg" alt="Twitter">
+              <img src="images/new-icons/Youtube.svg" alt="Youtube">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
