added full responsiveness for mobile or small device

--- a/index.html
+++ b/index.html
@@ -10,24 +10,40 @@
     <header class="header">
     <!-- NAVBAR SECTION -->
         <nav class="navbar">
-            <div class="menu">
-                menu
-            </div>
-        <h3 class="nav-logo common-headings black">Influencer products</h3>
-        <ul class="nav-menu-items">
+    
+        <span class="menu-icon">
+            <img src="images/new-icons/material-symbols--menu (1).svg" alt="">
+        </span>
+            
+        <div class="nav-heading">
+            <h3 class="nav-logo common-headings black">Influencer products</h3>
+        </div>
+
+        <div class="nav-container">
+            <ul class="nav-menu-items">
             <li><a href="">Home</a></li>
             <li><a href="">Products</a></li>
             <li><a href="">Sign up</a></li>
             <li><a href="">Log in</a></li>
+            <li><a href=""><img class="search-icon" src="images/icons/mynaui--search.svg" alt=""></a></li>
         </ul>
-        <img class="search-icon" src="images/icons/mynaui--search.svg" alt="">
-        <img class="cart-icon" src="images/icons/clarity--shopping-cart-outline-badged.svg" alt="">
+        <span class="cart">
+                <a href=""><img 
+            src="images/icons/clarity--shopping-cart-outline-badged.svg" alt=""></a>
+        </span> 
+        </div>  
+
     </nav>
     <!-- BANNER SECTION -->
      <div class="banner">
         <div class="first-side">
             <h3 class="banner-title black">Start your Journey as <br> Influencer</h3>
-            <p class="banner-description secondary-common-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros. Lectus faucibus.</p>
+          <span class="laptop-view">
+              <p class="banner-description secondary-common-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br class="laptop-view"> vestibulum sed  scelerisque eros. Lectus faucibus.</p>
+          </span>
+            <span class="mobile-view-text">
+                <p class="banner-description secondary-common-description">Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit. Sem vestibulum sed <br> scelerisque eros. Lectus faucibus.</p>
+            </span>
             <button class="banner-btn">
             <a href="">
                 Preebook now 
